@@ -1,10 +1,12 @@
+import java.io.FileInputStream
+import java.util.Properties
+
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.hilt.android)
     id("com.google.gms.google-services")
     id("com.google.firebase.crashlytics")
-    id("de.mannodermaus.android-junit5")
     kotlin("kapt")
 }
 
@@ -16,13 +18,62 @@ android {
         applicationId = "com.ggetters.app"
         minSdk = 29
         targetSdk = 36
-        versionCode = 5
-        versionName = "dev-2025w32a"
+        versionCode = 7
+        versionName = "2025w35a"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+
+        // --- Environment Variables
+
+        /**
+         * Function to retrieve a secret value from a property file.
+         *
+         * **Note:** This should be used only for the `local.properties` repository
+         * and these values should never be shared or committed to a version control
+         * system in any form.
+         *
+         * @param property The name of the property to retrieve.
+         * @param filename The name of the file to read from (should not be changed)
+         *
+         * @return The value of the requested property or an empty string if the
+         *         file or property could not be found.
+         *
+         * @author MP
+         */
+        fun getLocalSecret(
+            property: String, filename: String = "local.properties"
+        ): String {
+            val properties = Properties()
+            val propertiesFile = rootProject.file(filename)
+            if (propertiesFile.exists()) {
+                properties.load(FileInputStream(propertiesFile))
+            } else {
+                println("Local property file not found.")
+            }
+
+            return properties.getProperty(property) ?: ""
+        }
+        
+        buildConfigField(
+            type = "String",
+            name = "GOOGLE_SERVER_CLIENT_ID",
+            value = "\"${
+                getLocalSecret("GOOGLE_SERVER_CLIENT_ID")
+            }\""
+        )
     }
-    tasks.withType<Test> {
-        useJUnitPlatform()
+
+    afterEvaluate {
+        val isEnvironmentProduction = gradle.startParameter.taskNames.any {
+            it.contains("release", ignoreCase = true)
+        }
+
+        if (isEnvironmentProduction) {
+            val clientId = (project.findProperty("GOOGLE_SERVER_CLIENT_ID") as? String).orEmpty()
+            if (clientId.isBlank()) throw GradleException(
+                "Essential property is missing from build: (use -P GOOGLE_SERVER_CLIENT_ID=...)"
+            )
+        }
     }
 
     buildTypes {
@@ -31,10 +82,10 @@ android {
         }
         release {
             isDebuggable = false
-            isMinifyEnabled = false
+            isMinifyEnabled = true
+            isShrinkResources = true
             proguardFiles(
-                getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             )
         }
     }
@@ -52,108 +103,63 @@ android {
     kotlinOptions {
         jvmTarget = "11"
     }
-
-    android {
-        testOptions {
-            unitTests.isIncludeAndroidResources = true
-            unitTests.all {
-                it.useJUnitPlatform()
-                it.jvmArgs("-Dnet.bytebuddy.experimental=true")
-                it.systemProperty("DISABLE_CLOGGER", "true")
-            }
-        }
-    }
-
-    dependencies {
-        implementation(libs.androidx.core.ktx)
-        implementation(libs.androidx.appcompat)
-        implementation(libs.material)
-        implementation(libs.androidx.activity)
-        implementation(libs.androidx.constraintlayout)
-        implementation(libs.firebase.firestore.ktx)
-        implementation(libs.androidx.fragment.ktx)
-        testImplementation(libs.junit)
-        androidTestImplementation(libs.androidx.junit)
-        androidTestImplementation(libs.androidx.espresso.core)
-
-        // Unit Testing
-        testImplementation("org.jetbrains.kotlin:kotlin-test:2.0.0")
-        testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.0")
-        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.0")
-        testImplementation("io.mockk:mockk:1.13.13")
-        testImplementation("org.assertj:assertj-core:3.26.3")
-        testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.1")
-        testImplementation("org.robolectric:robolectric:4.12.2")
-
-        // Integration Testing
-        androidTestImplementation("androidx.test.ext:junit:1.2.1")
-        androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
-        androidTestImplementation("androidx.test.espresso:espresso-contrib:3.6.1")
-        androidTestImplementation("io.mockk:mockk-android:1.13.13")
-
-        // Architecture Components
-        androidTestImplementation("androidx.arch.core:core-testing:2.2.0")
-
-        //  Test coverage
-        testImplementation("org.jacoco:org.jacoco.core:0.8.10")
-        // Jetpack Compose
-
-        implementation(platform(libs.androidx.compose.bom))
-        implementation(libs.androidx.ui)
-        implementation(libs.androidx.material3)
-        implementation(libs.androidx.ui.tooling.preview)
-        implementation(libs.androidx.navigation.compose)
-        debugImplementation(libs.androidx.ui.tooling)
-        debugImplementation(libs.androidx.ui.test.manifest)
-        implementation(libs.androidx.core.splashscreen)
-
-        //  Mockito for Kotlin
-        testImplementation("org.mockito.kotlin:mockito-kotlin:5.3.1")
-        testImplementation("org.mockito:mockito-core:5.12.0")
-        testImplementation("org.mockito:mockito-inline:5.2.0")
-        testImplementation("io.mockk:mockk:1.13.12")
-
-        //  Coroutines test support
-        testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0")
-
-        // AndroidX test core
-        testImplementation("androidx.test:core:1.5.0")
-        implementation("androidx.core:core-ktx:1.12.0")
-        implementation("androidx.appcompat:appcompat:1.6.1")
-        implementation("com.google.android.material:material:1.11.0")
-        implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-        implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
-        implementation("androidx.activity:activity-compose:1.8.2")
-
-        // Firebase
-
-        implementation(platform(libs.firebase.bom))
-        implementation(libs.firebase.analytics)
-        implementation(libs.firebase.crashlytics.ndk)
-        implementation(libs.firebase.auth)
-        implementation(libs.firebase.firestore.ktx)
-
-        // Room
-
-        implementation(libs.androidx.room.runtime)
-        implementation(libs.androidx.room.ktx)
-        kapt(libs.androidx.room.compiler)
-
-        // Hilt
-
-        implementation(libs.hilt.android)
-        kapt(libs.hilt.android.compiler)
-        implementation(libs.hilt.navigation.compose)
-
-        // Lottie
-
-        implementation(libs.lottie)
-
-        implementation("com.google.code.gson:gson:2.10.1")
-    }
 }
+
 dependencies {
-    testImplementation(libs.androidx.core.testing)
-    testImplementation(libs.androidx.core.testing)
-    testImplementation("io.mockk:mockk-android:1.13.13")
+    implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.appcompat)
+    implementation(libs.material)
+    implementation(libs.androidx.activity)
+    implementation(libs.androidx.constraintlayout)
+    implementation(libs.firebase.firestore.ktx)
+    implementation(libs.androidx.fragment.ktx)
+    implementation(libs.googleid)
+    implementation(libs.androidx.hilt.common)
+    implementation(libs.androidx.work.runtime.ktx)
+    implementation(libs.androidx.datastore.core)
+    implementation(libs.androidx.datastore.preferences)
+    implementation(libs.kotlinx.coroutines.core)
+    implementation(libs.kotlinx.coroutines.android)
+    implementation(libs.androidx.lifecycle.viewmodel.ktx)
+    implementation(libs.androidx.lifecycle.runtime.ktx)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
+
+    // Jetpack Compose
+
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.ui)
+    implementation(libs.androidx.material3)
+    implementation(libs.androidx.ui.tooling.preview)
+    implementation(libs.androidx.navigation.compose)
+    debugImplementation(libs.androidx.ui.tooling)
+    debugImplementation(libs.androidx.ui.test.manifest)
+    implementation(libs.androidx.core.splashscreen)
+
+    // Firebase
+
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.analytics)
+    implementation(libs.firebase.crashlytics.ndk)
+    implementation(libs.firebase.auth)
+    implementation(libs.firebase.firestore.ktx)
+
+    // Room
+
+    implementation(libs.androidx.room.runtime)
+    implementation(libs.androidx.room.ktx)
+    kapt(libs.androidx.room.compiler)
+
+    // Hilt
+
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.android.compiler)
+    implementation(libs.hilt.navigation.compose)
+    implementation("androidx.hilt:hilt-work:1.2.0")
+
+    // Lottie
+
+    implementation(libs.lottie)
+    implementation("com.google.code.gson:gson:2.10.1")
 }
